# ProtoDatabase

./: CMakeLists.txt  LICENSE  README.md  local.cmake
cmake/: ProtoDatabaseConfig.cmake.in
include/ProtoDatabase/: Database.h
proto/: KeyOption.proto
src/: Database.cpp
tests/: database.cpp
tests/proto/: messages.pb.cc  messages.pb.h  messages.proto
